Update P3C4 folder structure and update links

--- a/src/content/docs/book/part-3-programs-as-concepts/4-collections/2-trailside/10-arrays.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/4-collections/2-trailside/10-arrays.mdx
@@ -16,7 +16,7 @@ An [array](https://en.wikibooks.org/wiki/C_Sharp_Programming/Data_structures#Arr
 
 ## Arrays in Memory
 
-Arrays store multiple values, with an index that provides access to the individual elements within the array. Conceptually this can be viewed as a **variable** that contains multiple slots (the elements) into which the values are stored. 
+Arrays store multiple values, with an index that provides access to the individual elements within the array. Conceptually this can be viewed as a **variable** that contains multiple slots (the elements) into which the values are stored.
 
 Many languages have **0** as the index of the first element. This reflects how the values are actually stored in memory. The following image shows how an array (named `arr` in this case) is stored in memory. The array is a **contiguous** area in memory, with the elements being next to each other. You can think of the array as starting at the first element, so you need to skip _0_ elements to access the first element. The second element is accessed by skipping _1_ element, so it has index _1_. The third element is accessed by skipping _2_ elements, so it has the index _2_, etc.
 
@@ -26,7 +26,7 @@ The great thing is that you do not need to think about these details, but knowin
 
 ![Arrays in memory](./images/arrays-data.png)
 
-*The image above is a visualisation of an array variable `data` in computer memory.*
+_The image above is a visualisation of an array variable `data` in computer memory._
 
 ## Accessing Array Elements
 
@@ -110,13 +110,13 @@ foreach(int val in data)
 ~~~
 
 Read further about this at:
-* [Looping a number of times](https://www.microsoft.com/net/tutorials/csharp/getting-started/for-loops) in Microsoft Tutorial
-* [Working with Arrays and Collections](https://www.microsoft.com/net/tutorials/csharp/getting-started/arrays-collections) from Microsoft Tutorial
-* [Looping through Members of a Collection](https://www.microsoft.com/net/tutorials/csharp/getting-started/looping-collections)
-* [For for Foreach](https://en.wikibooks.org/wiki/C_Sharp_Programming/Control#for_loop) in the online C# Programming book
-* [Arrays](https://en.wikibooks.org/wiki/C_Sharp_Programming/Data_structures#Arrays)
+- [Looping a number of times](https://www.microsoft.com/net/tutorials/csharp/getting-started/for-loops) in Microsoft Tutorial
+- [Working with Arrays and Collections](https://www.microsoft.com/net/tutorials/csharp/getting-started/arrays-collections) from Microsoft Tutorial
+- [Looping through Members of a Collection](https://www.microsoft.com/net/tutorials/csharp/getting-started/looping-collections)
+- [For for Foreach](https://en.wikibooks.org/wiki/C_Sharp_Programming/Control#for_loop) in the online C# Programming book
+- [Arrays](https://en.wikibooks.org/wiki/C_Sharp_Programming/Data_structures#Arrays)
 
-For help with syntax details, see this week's [syntax guide](/book/part-3-programs-as-concepts/4-collections/1-concepts/25-syntax-guide).
+For help with syntax details, see this week's [syntax guide](/book/part-3-programs-as-concepts/4-collections/2-trailside/25-syntax-guide).
 
 ## Working with Arrays
 
