Minor tweeks to pages

--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/1-tour/00-explore-references.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/1-tour/00-explore-references.mdx
@@ -173,7 +173,7 @@ void print_user(const user_data& user)
   </AccordionItem>
 </Accordion>
 
-## User references to update a user
+## Use references to update a user
 
 Now that we have the main building blocks in place, we can add an `update_user` procedure. Update user can be passed a user **by reference**, allowing it to update the user data by accessing it via a reference. This reference is an alias of the argument passed to it. When you read or write to this variable, you are indirectly accessing the data in the variable that was passed to this as the argument.
 
