Add new debugger videos  - Setting up the VS Code Debugger for C#  - Using Breakpoints in the VS Code Debugger  - Examining Variables in the VS Code Debugger

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
@@ -1,6 +1,7 @@
 ---
 title: Debugging Your First Program
 ---
+import { YouTube } from 'astro-embed';
 
 As you continue learning new coding concepts, you will inevitably come across errors (bugs) in your code. Don't be discouraged though! Even the most skilled programmers run into bugs in their programs. You will get better and faster at [Debugging](/book/part-0-getting-started/3-building-programs/2-trailside/04-0-debug) the more you practice.
 
@@ -121,3 +122,25 @@ Developing your debugging skills will be incredibly useful for when you encounte
 :::tip[Want to keep practicing?]
 You can use the larger Hello World code examples on the previous page to continue testing out the debugger!
 :::
+
+## Supplementary Videos
+
+Prefer to follow a video? We've got you covered!
+
+### Setting up your C# project and 'Run and Debug' configuration
+
+<div class="not-content">
+  <YouTube id="xo14LPTapKU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+
+In this video we demonstrate how to:
+1. Create a C# project
+2. Setup the 'Run and Debug' configuration, so you can get started with the debugger!
+
+### Debugging with breakpoints
+
+<div class="not-content">
+  <YouTube id="M_b601gHu2g" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+
+In this video we demonstrate how to use breakpointing and **step-over**/**continue** in the debugger, giving us the ability to follow the flow of execution, line by line.
