Add new debugger video  - Step in/out

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/04-function-decl.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/04-function-decl.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Functions"
 ---
+import { YouTube } from 'astro-embed';
 
 Functions are used to **calculate values**. They are almost identical to procedures -- they have a name, contain instructions, and can be called to perform their actions. The *only* difference is what happens at the end. When a function ends, it [returns](/book/part-2-organised-code/2-organising-code/2-trailside/05-return) a value to the caller, whereas a procedure just ends. This means that procedures are called within [statements](/book/part-1-instructions/2-communicating-syntax/2-trailside/02-statement), whereas functions can be called within [expressions](/book/part-1-instructions/2-communicating-syntax/2-trailside/03-expression).
 
@@ -91,3 +92,9 @@ We will explore how to do that next.
 - Each function's instructions are **isolated** from the other code in your program.
 
 :::
+
+## Debugging
+Now that we can declare functions and procedures, we also need to make sure we can debug them! This video will cover how to follow the flow of code by _stepping in_ and _out_ of functions, along with some common issues that might show up while stepping in C++.
+<div class="not-content">
+  <YouTube id="Vv9lYSbyKdw" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
