Add video on arrays (explanation/demonstration)

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/0-panorama/0-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/0-panorama/0-array.mdx
@@ -1,6 +1,7 @@
 ---
 title: Array
 ---
+import { YouTube } from 'astro-embed';
 
 An array is a variable that contains multiple values, each accessible via an index. In C/C++, an array does not remember its size, so this is something we need to remember and keep track of throughout the program.
 
@@ -75,3 +76,9 @@ int main()
 }
 
 ```
+
+## Video Overview and Demonstration
+In this video we'll take a look at the concept of arrays visually, and then walk through some simple code that uses them!
+<div class="not-content">
+  <YouTube id="dAHY-LyTRW0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
