Add videos on compiling C++ and VS Code setup

--- a/src/content/docs/book/part-2-organised-code/1-starting-cpp/2-trailside/1-0-building-cpp.mdx
+++ b/src/content/docs/book/part-2-organised-code/1-starting-cpp/2-trailside/1-0-building-cpp.mdx
@@ -1,6 +1,7 @@
 ---
 title: Building a C/C++ Program
 ---
+import { YouTube } from 'astro-embed';
 
 C/C++ are **compiled** languages. Unlike C#, they do not need a runtime environment. This means that you compile and then directly run the resulting program.
 
@@ -114,3 +115,9 @@ Remember to make sure you save, compile, and then run your program as you make c
 
 Remember: **save**, **compile**, and then **run**.
 :::
+
+## Video Walkthrough
+In this video we'll step through how to compile a C++ program manually.
+<div class="not-content">
+  <YouTube id="uWj4MmbnlJQ" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
