Progress on control flow panorama and add notes for explore tasks

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/3-explore/3-explore.mdx
@@ -6,6 +6,10 @@ import { YouTube } from 'astro-embed';
 
 ## Test Your Knowledge
 
+- Input functions - AFL game data - calculations of game, score,
+- Input functions - ??
+- Input functions - Player profile (name, starting health, intelligence)
+
 ### Store POS -- Input System
 
 <div class="not-content">
