--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/3-explore/3-explore.mdx
@@ -6,6 +6,10 @@ import { YouTube } from 'astro-embed';
 
 ## Test Your Knowledge
 
+- Simple Database ... one value... menu
+- b
+- Draw UI - pass in the game details, draw the UI - health bar?
+
 ### Store POS -- Creating Products
 
 <div class="not-content">
