--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/3-explore/3-explore.mdx
@@ -6,6 +6,9 @@ import { YouTube } from 'astro-embed';
 
 ## Test Your Knowledge
 
+- Database with update (in multiple ways) -- business logic? -- interest calculation account - dynamic account ... add transaction (deposit/withdraw) ... add interest ... print account ...  - (description, balance, interest, period)
+- Simple game - one entity - shape click - target shoot (reaction difficulty scale - size based on last speed to click) - shows min size for score
+
 ### Store POS -- Altering Products
 
 <div class="not-content">
