--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/3-explore/3-explore.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/3-explore/3-explore.mdx
@@ -6,6 +6,10 @@ import { YouTube } from 'astro-embed';
 
 ## Test Your Knowledge
 
+- database - full database... one entity... with a few edit options
+- music player - database with music and playing the music (songs)
+- game - rock dodge - images/circles/simple player (move, left right, rocks go top bottom)
+
 ### Store POS -- Adding more Products
 
 <div class="not-content">
