Updated macOS installation to add videos

--- a/src/content/docs/book/appendix/0-installation/2-1-setup-macos.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-1-setup-macos.mdx
@@ -6,14 +6,16 @@ sidebar:
   label: " - macOS"
 ---
 
+import { YouTube } from 'astro-embed';
+
 In this guide, we will walk through the steps to install the necessary Applications and Tools that you will need to code in C# and C++ with SplashKit.  
 We will be using the **Terminal** app, with the **zsh** shell. You can also use the **bash** shell if you prefer.
 
 :::note[Already have SplashKit installed?]
-If you have previously installed SplashKit (before 2024):
+If you have previously installed SplashKit:
 
 - Update SplashKit using your Terminal, with the command: `skm update`
-- Then you can skip to Step [3. Install SplashKit Globally](#3-install-splashkit-globally)
+- Then you can skip to [Install SplashKit Globally](#install-splashkit-globally)
 
 :::
 
@@ -24,6 +26,12 @@ To get SplashKit and other coding tools installed on macOS, follow the steps out
 ## 1. Install XCode Command Line Tools
 
 **Xcode Command Line Tools** is a package of tools provided by Apple for developers to enable command-line development and building of software on macOS, using your **Terminal** app. *It includes tools you will need for installing SplashKit and coding in the next chapters.*
+
+:::note[XCode Command Line Tools Installation Video:]
+<div class="not-content">
+  <YouTube id="3CHGbyVY2F8" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
 
 To install these tools, run the command below in your *Terminal* app:
 
@@ -49,9 +57,15 @@ xcode-select --install
 
 That means you've already installed Xcode, and are ready to move to the next step!
 
-## 2. Install SplashKit SDK
+## 2. Install SplashKit
 
 [SplashKit](https://splashkit.io) is a beginner's all-purpose software toolkit that will allow you to create fun and exciting programs more easily, especially for Graphical User Interface (GUI) programs.
+
+:::note[SplashKit Installation Video:]
+<div class="not-content">
+  <YouTube id="KlT_PCoc0pw" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
 
 Copy and paste the following command into your Terminal window to download and run the SplashKit installer:
 
@@ -62,14 +76,14 @@ bash <(curl -s https://raw.githubusercontent.com/splashkit/skm/master/install-sc
 ![Gif showing skm installing in Terminal](/gifs/setup-macos/skm-install.gif)
 <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
-:::tip[Troubleshooting tips!:]
+:::tip[Troubleshooting tips:]
 
 1. If the command above **does nothing**, go to the [No response when running SplashKit installation command](/book/appendix/0-installation/3-0-troubleshooting-install/#no-response-when-running-splashkit-installation-command) section in the Installation Troubleshooting page for an alternative installation process.
 2. If you see a message about "**permission denied**" or "**Operation not permitted**", go to the [Permission issue when running SplashKit installation command](/book/appendix/0-installation/3-0-troubleshooting-install/#permission-issue-when-running-splashkit-installation-command) section in the Installation Troubleshooting page for steps to follow to resolve this issue.
 
 :::
 
-## 3. Install SplashKit Globally
+### Install SplashKit Globally
 
 Finally, you will need to install the SplashKit Global Libraries. This will install the SplashKit libraries and library include files into the system's default global locations so that the compiler can find these files when building (compiling) programs created with SplashKit.
 
@@ -86,11 +100,17 @@ skm global install
 The command above will add the **SplashKit libraries** into the `/usr/local/lib/` folder, and the required **SplashKit library include files** into the `/usr/local/include` folder.
 :::
 
-## 4. Install Visual Studio Code
+## 3. Install Visual Studio Code
 
 Visual Studio Code, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects!
 
-:::note[VS Code has it all!]
+:::note[VS Code Installation Video:]
+<div class="not-content">
+  <YouTube id="ABJJMuzzbgA" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
+
+:::tip[VS Code has it all!]
 Once you have your code project set up, Visual Studio Code will be the main program you will use to write, build, run and debug your code.
 :::
 
@@ -111,7 +131,6 @@ Follow the steps in the [**Launching from the command line**](https://code.visua
 If you are having issues with the `code` command not working after following the steps above, go to the ['zsh: command not found: code'](/book/appendix/0-installation/3-0-troubleshooting-install/#zsh-command-not-found-code) section in the Installation Troubleshooting page for to use an alternative installation process.
 :::
 
-<!-- TODO: Maybe update heading to "Install VS Code Extensions -->
 ### Recommended Extensions
 
 The final step to complete the setup of VS Code is to install a few *Extensions* in VS Code:
@@ -120,7 +139,7 @@ The final step to complete the setup of VS Code is to install a few *Extensions*
 
 Go to the page linked above, follow the steps to install both the C# and C/C++ recommended extensions, and then come back here and continue to the next step. *You can use the "Back button" in your browser to return to this page.*
 
-## 5. Install Language Specific Tools
+## 4. Install Language Specific Tools
 
 Some coding languages require specific tools/frameworks to be installed to be able to build and run your code files.  
 As you will be coding in C# and C++ in this book, let's look at the tools needed for these languages:
@@ -128,6 +147,12 @@ As you will be coding in C# and C++ in this book, let's look at the tools needed
 ### C# Tools
 
 For coding in C#, you will need to install the `.NET` SDK which will allow you to use the *dotnet* terminal command to create, build, and run your C# project code.
+
+:::note[.NET Installation Video:]
+<div class="not-content">
+  <YouTube id="i2g9br8Y9Jc" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
 
 Download the latest version of the .NET SDK for macOS from the official .NET website: [dotnet.microsoft.com/download](https://dotnet.microsoft.com/download)
 
@@ -141,29 +166,27 @@ For coding in C++, you will need to have a C++ compiler installed to build your 
 If you installed Xcode Command Line Tools successfully in Step 1, then you will already have the necessary compilers installed and ready for coding in C++!
 :::
 
-## 6. Optional Steps
+## 5. Optional Steps
 
 ### Check Environment Variables
 
 Through this installation process, some steps *should* have edited your computer's environment variables, or your "Shell Profile" file.
 
-To ensure the required *paths* will be added to your **PATH** environment variable each time you open a new Terminal shell, you will need to check that your **"Shell Profile" file** contains the following lines:
+To ensure the required *paths* will be added to your **PATH** environment variable each time you open a new Terminal shell, you will need to check that your **"Shell Profile" file** contains the following line:
 
 ```bash
 export PATH="$HOME/.splashkit:$PATH"
-export PATH="/usr/local/share/dotnet:$PATH"
-export PATH="$PATH:/Applications/Visual Studio Code.app/Contents/Resources/app/bin"
 ```
 
 :::tip[Shell Profiles]
 The two most common shell profiles are **zsh** (Default shell since macOS Catalina) and **bash**:
 
 - If you are using `zsh` (Z Shell) then the *"Shell Profile"* files are: `.zshrc` or `.zprofile`.
-- If you are using `bash` (Bash Shell) then the *"Shell Profile"* files are: `.bash_profile` or `.bashrc`.
+- If you are using `bash` (Bash Shell) then the *"Shell Profile"* files are: `.bashrc` or `.bash_profile`.
 
 :::
 
-If you are missing any of the lines above, you can edit your "Shell Profile" file in a few ways:
+If you are missing the line above, you can edit your "Shell Profile" file in a few ways:
 
 ### Using '*nano*' in the Terminal
 
@@ -173,18 +196,9 @@ To open the file in the "nano" shell, copy and paste the following command in yo
 nano .zshrc
 ```
 
-The result of the command above will look similar to this:
+To edit the file directly inside the **nano** terminal window, you can just move the cursor down to the last line and paste the missing command.
 
-![Terminal window showing nano opening .zshrc file](./images/setup-macos/nano-zshrc.png)
-<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
-
-Now, to edit the file directly inside the **nano** terminal window, you can just move the cursor down to the last line and paste the missing command.  
 Once you're finished, press ***Control*** (^) + ***X*** to exit **nano** and follow the prompts to save the changes.
-
-For example, if the last line was missing:
-
-![Gif showing .zshrc file being edited using nano command](/gifs/setup-macos/nano-edit-zshrc.gif)
-<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
 ### Using 'code' to open .zshrc file in Visual Studio Code
 
