--- a/src/content/docs/book/appendix/0-installation/2-6-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-6-setup-win-msys.mdx
@@ -5,14 +5,15 @@ sidebar:
     class: windows
   label: " - Windows (MSYS2)"
 ---
+import { YouTube } from 'astro-embed';
 
 In this guide, we will walk through the steps to install the necessary Applications and Tools using **MSYS2** (**M**inimal **SYS**tem) on Windows. This will enable you to code in C# and C++ with SplashKit.
 
 :::note[Already have SplashKit installed?]
 If you have previously installed SplashKit:
 
-- Update SplashKit using your "MSYS2 MINGW64" terminal with the command: `skm update`
-- Then you can skip to Step [4: Install SplashKit Globally](#4-install-splashkit-globally).
+- Update SplashKit using your MSYS2/MINGW64 terminal with the command: `skm update`
+- Then you can skip to [Install SplashKit Globally](#install-splashkit-globally).
 
 :::
 
@@ -22,13 +23,17 @@ To get SplashKit and other coding tools installed on Windows, using MSYS2, follo
 
 ## 1. Install MSYS2
 
-Download the installer (32-bit or 64-bit) from the official MSYS2 website: [www.msys2.org](https://www.msys2.org/)
+Download the installer from the official MSYS2 website: [www.msys2.org](https://www.msys2.org/)
 
-![Gif showing MSYS2 download](/gifs/setup-windows/install-msys.gif)
-<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+:::note[MSYS2 Installation Video:]
+<div class="not-content">
+  <YouTube id="Hayjgo1Kqg0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
 
-To install MSYS2, double-click the downloaded executable file, and follow the on-screen instructions.  
-*It is recommended to use the default install path, but you can customise the other installation options as needed.*
+To install MSYS2, double-click the downloaded executable file, and follow the on-screen instructions.
+
+*It is strongly recommended that you use the default install path, but you can customise the other installation options as needed.*
 
 :::note[Which Terminal?]
 MSYS2 comes with a variety of terminal environments. The **MINGW64** terminal environment is recommended for 64-bit computers (MINGW32 for 32-bit) as it has been found to support the C# and C++ terminal commands you will use.
@@ -47,11 +52,54 @@ To make it easier to open each time, you can pin your terminal to the Taskbar.
 <div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 :::
 
-## 2. Install git and clang Command Line Tools
+## Automated Setup
 
-To install SplashKit, you will firstly need to install **Git** and a compiler which is used to test the install.
+This script will install the following applications and tools:
 
-Copy and paste the following command into your **MINGW64** terminal window to install the `git` and `clang` command-line tool:
+- Visual Studio Code
+  - C/C++ Extensions
+  - C# Extensions
+- .NET SDK
+- SplashKit
+  - SplashKit Global
+- git
+- clang
+- gcc
+- gdb
+
+Open the MSYS2/**MINGW64** Terminal using **"Run as Administrator"** and run the following command:
+
+```bash
+curl -s "https://programmers.guide/resources/MSYS2_InstallScript.sh" | bash /dev/stdin
+```
+
+:::note
+This script may take a while to run (approx. 5-10 mins).
+:::
+
+Once the automated script has finished running, close and reopen the Terminal.
+
+Run the command `skm` to check SplashKit is installed correctly.
+
+:::tip[Add MINGW64 Terminal to Visual Studio Code]
+Now go to the [Setup VS Code Terminal](#setup-vs-code-terminal) section to add your MSYS2/MINGW64 Terminal into VS Code, and then you're finished!
+:::
+
+## Manual Steps
+
+### 2. Install Command Line Tools
+
+To install SplashKit, you will firstly need to install some command line tools using the `pacman` package manager.
+
+:::note[Command Line Tools Installation Video:]
+<div class="not-content">
+  <YouTube id="XxaHFoGdlj0" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+
+*The command used in the video above has been altered slightly, but the process is the same.*
+:::
+
+Copy and paste the following command into your **MINGW64** terminal window to install the `git`, `clang`, `gcc` and `gdb` pacman packages:
 
 ```bash
 pacman -S git mingw-w64-x86_64-clang mingw-w64-x86_64-gcc mingw-w64-x86_64-gdb --noconfirm --disable-download-timeout
@@ -63,14 +111,14 @@ Unfortunately, you won't be able to use `Ctrl` + `V` to paste.
 Instead, right-click anywhere in the terminal window and then select **Paste**.
 :::
 
-## 3. Install SplashKit SDK
+### 3. Install SplashKit
 
 SplashKit is a beginner's all-purpose software toolkit that will allow you to create fun and exciting programs more easily, especially for Graphical User Interface (GUI) programs.
 
-:::tip[Curious to know more?]
-The **SplashKit SDK** is installed using the `skm-install.sh` shell script which is stored in the [**skm**](https://github.com/splashkit/skm) GitHub repository (in the **install-scripts** folder).
-
-It will also add the required paths to your PATH environment variable.
+:::note[SplashKit Installation Video:]
+<div class="not-content">
+  <YouTube id="ndP8vrf9oOU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 :::
 
 Copy and paste the following command into your MINGW64 terminal to download and run the SplashKit installer:
@@ -79,44 +127,47 @@ Copy and paste the following command into your MINGW64 terminal to download and 
 bash <(curl -s https://raw.githubusercontent.com/splashkit/skm/master/install-scripts/skm-install.sh)
 ```
 
-*For this step*, you can use any of the terminal environments provided by MSYS2, such as the **MSYS** terminal shown here:
-
-![MSYS SKM Install](/gifs/setup-windows/msys-skm-install.gif)
-<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
-
 :::tip[Troubleshooting tip:]
 If you have issues installing the SplashKit SDK, go to the [No response when running SplashKit installation command](/book/appendix/0-installation/3-0-troubleshooting-install/#no-response-when-running-splashkit-installation-command) section in the Installation Troubleshooting page for an alternative installation process.
 :::
 
-## 4: Install SplashKit Globally
+:::note[Curious to know more?]
+The **SplashKit SDK** is installed using the `skm-install.sh` shell script which is stored in the [**skm**](https://github.com/splashkit/skm) GitHub repository (in the **install-scripts** folder).
+
+It will also add the required paths to your PATH environment variable.
+:::
+
+### Install SplashKit Globally
 
 Finally, you will need to install the SplashKit Global Libraries. This will install the SplashKit libraries and library include files into the system's default global locations so that the compiler can find these files when building (compiling) programs created with SplashKit.
 
-To install SplashKit globally, open the MINGW64 terminal as an **administrator**. Then run the following command in the terminal window:
+To install SplashKit globally, open the MINGW64 terminal and run the following command in the terminal window:
 
 ```bash
 skm global install
 ```
 
-![MSYS Global Install](/gifs/setup-windows/msys-global-install.gif)
-<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
+You may need to open the MINGW64 Terminal with "Run as administrator" if you have issues.
 
 :::note[What does this command do specifically?]
-The command above will add the **SplashKit libraries** into the `/usr/local/lib/` folder, and the required **SplashKit library include files** into the `/usr/local/include` folder.
+The command above will add the **SplashKit libraries** into the `/mingw64/lib` folder, and the required **SplashKit library include files** into the `/mingw64/include` folder.
 :::
 
-## 5. Install Visual Studio Code
+### 4. Install Visual Studio Code
 
 Visual Studio Code, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects!
+
+:::note[VS Code Installation Video:]
+<div class="not-content">
+  <YouTube id="UqGIPYWprRE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
 
 :::note[VS Code has it all!]
 Once you have your code project set up, Visual Studio Code will be the main program you will use to write, build, run and debug your code.
 :::
 
 Download and run the installer from: [code.visualstudio.com/Download](https://code.visualstudio.com/Download).
-
-![Gif showing Visual Studio Code installation](/gifs/setup-windows/install-vscode.gif)
-<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 
 :::tip[Open Code from Terminal]
 You can open Visual Studio Code from the MINGW64 terminal by typing `code` and pressing enter. `code .` will open the current folder in Visual Studio Code.
@@ -172,7 +223,7 @@ Create a new line just before the last closing curly brace `}` at the end of the
     },
 ```
 
-:::note
+:::note[Troubleshooting Notes:]
 
 - If you already have some settings included in this file, you will need to add a comma `,` after the closing curly brace `}` on the line above your new line.
 - If you already see code that looks similar to the code above, you may need to copy only small parts to match the code above.
@@ -195,7 +246,7 @@ The final step to complete the setup of VS Code is to install a few *Extensions*
 
 Go to the page linked above, follow the steps to install both the C# and C/C++ recommended extensions, and then come back here and continue to the next step. *You can use the "Back button" in your browser to return to this page.*
 
-## 6. Install Language Specific Tools
+### 5. Install Language Specific Tools
 
 Some coding languages require specific tools/frameworks to be installed to be able to build and run your code files.  
 As you will be coding in C# and C++ in this book, let's look at the tools needed for these languages:
@@ -204,24 +255,23 @@ As you will be coding in C# and C++ in this book, let's look at the tools needed
 
 For coding in C#, you will need to install the `.NET` SDK which will allow you to use the *dotnet* terminal command to create, build, and run your C# project code.
 
+:::note[.NET Installation Video:]
+<div class="not-content">
+  <YouTube id="lmJjNbPwAlw" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
+
 Download the latest version of the .NET SDK for Windows from the official .NET website: [dotnet.microsoft.com/download](https://dotnet.microsoft.com/download)
 
 Run the downloaded installer and follow on-screen instructions.
 
 ### C/C++ Tools
 
-For coding in C++, you will need to have a C++ compiler installed to build your C++ code into a file you can use to run your program. Commonly used C++ compilers are `g++` and `clang++`, which can be installed with **GCC** (**G**NU **C**ompiler **C**ollection).
+For coding in C++, you will need to have a C++ compiler installed to build your C++ code into a file you can use to run your program. Commonly used C++ compilers are `g++` and `clang++`, which can be installed with **GCC** (**G**NU **C**ompiler **C**ollection). You will also need to install **GDB** (**G**NU **D**e**b**ugger), which you can use when debugging C++ programs.
 
-You will also need to install **GDB** (**G**NU **D**e**b**ugger), which you can use when debugging C++ programs.
-
-To install GCC and GDB, copy and paste the following commands into your MINGW64 terminal window:
-
-```bash
-pacman -S mingw-w64-x86_64-gcc --noconfirm --disable-download-timeout
-pacman -S mingw-w64-x86_64-gdb --noconfirm --disable-download-timeout
-```
-
-These commands will install the necessary C/C++ compilers and debuggers for your development environment.
+:::note
+If you installed the Command Line Tools successfully in Step 2, then you will already have the necessary compilers installed and ready for coding in C++!
+:::
 
 Your Windows machine is now set up with MSYS2, Visual Studio Code, and SplashKit, ready for C# and C++ development. Happy coding!
 
@@ -249,3 +299,14 @@ pwd -W
 # Open the current directory in File Explorer
 explorer .
 ```
+
+:::note[Shortcut/Alternative way to use "cd" command:]
+
+Here is a video showing how you can click and drag folders into your MSYS2/MINGW64 terminal to make using the `cd` command quicker/easier.
+
+Note that you need to type `cd` then add a *space* before you drag the folder.
+
+<div class="not-content">
+  <YouTube id="s2YTKsRjkWI" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+:::
