Update "Automated Setup" sections for windows install pages

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -82,7 +82,8 @@ Once the automated script has finished running, close and reopen the Terminal.
 Run the command `skm` to check SplashKit is installed correctly.
 
 :::tip[Add MINGW64 Terminal to Visual Studio Code]
-Now go to the [Setup VS Code Terminal](#setup-vs-code-terminal) section to add your MSYS2/MINGW64 Terminal into VS Code, and then you're finished!
+Now go to the [Setup VS Code Terminal](#setup-vs-code-terminal) section to add your MSYS2/MINGW64 Terminal into VS Code.  
+Then, once you're finished, you can go to the [Using MSYS2](#using-msys2) section for more information about accessing files in your C drive with the MSYS2/MINGW64 terminal.
 :::
 
 ## Manual Steps
