Rewrite the change calculator example

--- a/src/content/docs/book/part-1-instructions/3-control-flow/2-trailside/10-design-basic-theory.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/2-trailside/10-design-basic-theory.mdx
@@ -1,10 +1,8 @@
 ---
-title: Control flow using Flowcharts
-sidebar:
-  label: " - Flowcharts + Control Flow"
+title: Flowcharts & Control Flow
 ---
 
-Before examining the use of control flow within the change calculator, let's have a look at a way of visually representing the flow of instructions within code. A common way of doing this is to use a **flowchart**. A flowchart is a diagram used to represent a sequence of actions, so it's perfect for representing a sequence of instructions (i.e., some code).
+Before examining the use of control flow, let's have a look at a way of visually representing the flow of instructions within code. A common way of doing this is to use a **flowchart**. A flowchart is a diagram used to represent a sequence of actions, so it's perfect for representing a sequence of instructions (i.e., some code).
 
 There are four basic flowchart symbols, shown in the figure below:
 
@@ -19,7 +17,7 @@ import guessThatNumberFlowChartSymbols from './images/guess-that-number-flowchar
 
 ## Structured Programming and Flowcharts
 
-Flowcharts can be used to represent *any* sequence of actions, but not all sequences of actions will be easy to code. For example, the image below is a flowchart that captures a joke about changing things. This flowchart is **not** one that can be coded using the structured statements covered in this chapter. The reason for this is that there are some steps that appear in multiple paths. This makies it impossible to code using the structured programming principles.
+Flowcharts can be used to represent *any* sequence of actions, but not all sequences of actions will be easy to code. For example, the image below is a flowchart that captures a joke about changing things. This flowchart is **not** one that can be coded using the structured statements covered in this chapter. The reason for this is that there are some steps that appear in multiple paths. This makes it impossible to code using the structured programming principles.
 
 ![Unstructured Flowchart](./images/guess-that-number-unstructured-flowchart.png "Unstructured Flowchart")
 
@@ -69,5 +67,3 @@ To recap, a flow chart showing **selection** will look like one of the following
 ...and a flow chart showing **repetition** will look like one of these two blocks, depending on when the loop's condition is evaluated.
 
 ![Figure x.y Flows for Repetition Blocks](./images/guess-that-number-flows-repetition-blocks.png "Flows for Repetition Blocks")
-
-Now that we have a tool for visualising a program's instructions, let's apply it to our change calculator.
