--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-2-events.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-2-events.mdx
@@ -7,7 +7,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components'
 
 Now we have the circle moving, but do we *always* want the circle to move? No, let's change it so that we *only* update the position *if* the user is holding down an arrow key.
 
-Add an [if statement](/book/part-1-instructions/3-control-flow/0-panorama/2-branches) that will check if the right arrow key is held down. You can put the code that adds to the `player_x` value within the if statement so that it is only run *if* the arrow key is held down.
+Add an [if statement](/book/part-1-instructions/3-control-flow/0-panorama/2-branches) that will check if the right arrow key is held down. You can put the code that adds to the `playerX` value within the if statement so that it is only run *if* the arrow key is held down.
 
 :::tip
 
@@ -25,21 +25,21 @@ You need to add `using SplashKit;` so that you can access `KeyCode.RightKey`.
     const int PLAYER_RADIUS = 50;
     const int PLAYER_SPEED = 3;
 
-    int player_x = 640;
+    int playerX = 640;
 
     OpenWindow("Circle Moving", 1280, 720);
 
     while( ! QuitRequested() )
     {
         ClearScreen(ColorWhite());
-        FillCircle(ColorTurquoise(), player_x, 360, PLAYER_RADIUS);
+        FillCircle(ColorTurquoise(), playerX, 360, PLAYER_RADIUS);
         RefreshScreen(60);
 
         ProcessEvents();
 
         if ( KeyDown(KeyCode.RightKey) )
         {
-            player_x += PLAYER_SPEED;
+            playerX += PLAYER_SPEED;
         }
     }
 
@@ -62,7 +62,7 @@ Remember it is still running in sequence, so here we have the while loop repeati
 
 Now we have it moving right, let's get it so we can move left as well.
 
-Add another if statement to check if the left key is held down. Inside this if statement, add the code to subtract the speed from the `player_x` variable.
+Add another if statement to check if the left key is held down. Inside this if statement, add the code to subtract the speed from the `playerX` variable.
 
 <Accordion>
   <AccordionItem header="Code to move left">
@@ -74,25 +74,25 @@ Add another if statement to check if the left key is held down. Inside this if s
     const int PLAYER_RADIUS = 50;
     const int PLAYER_SPEED = 3;
 
-    int player_x = 640;
+    int playerX = 640;
 
     OpenWindow("Circle Moving", 1280, 720);
 
     while( ! QuitRequested() )
     {
         ClearScreen(ColorWhite());
-        FillCircle(ColorTurquoise(), player_x, 360, PLAYER_RADIUS);
+        FillCircle(ColorTurquoise(), playerX, 360, PLAYER_RADIUS);
         RefreshScreen(60);
 
         ProcessEvents();
 
         if ( KeyDown(KeyCode.RightKey) )
         {
-            player_x += PLAYER_SPEED;
+            playerX += PLAYER_SPEED;
         }
         else if ( KeyDown(KeyCode.LeftKey) )
         {
-            player_x -= PLAYER_SPEED;
+            playerX -= PLAYER_SPEED;
         }
     }
 
@@ -119,26 +119,26 @@ Notice the logic is not quite right. Try removing the `else` and instead have tw
     const int PLAYER_RADIUS = 50;
     const int PLAYER_SPEED = 3;
 
-    int player_x = 640;
+    int playerX = 640;
 
     OpenWindow("Circle Moving", 1280, 720);
 
     while( ! QuitRequested() )
     {
         ClearScreen(ColorWhite());
-        FillCircle(ColorTurquoise(), player_x, 360, PLAYER_RADIUS);
+        FillCircle(ColorTurquoise(), playerX, 360, PLAYER_RADIUS);
         RefreshScreen(60);
 
         ProcessEvents();
 
         if ( KeyDown(KeyCode.RightKey) )
         {
-            player_x += PLAYER_SPEED;
+            playerX += PLAYER_SPEED;
         }
         
         if ( KeyDown(KeyCode.LeftKey) )
         {
-            player_x -= PLAYER_SPEED;
+            playerX -= PLAYER_SPEED;
         }
     }
 
